--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-moment": "^1.1.3",
+    "react-redux": "^8.0.5",
     "typescript": "4.9.5",
     "yup": "^0.32.11"
   },
