--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint-config-next": "13.1.6",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
-    "next": "13.1.6",
+    "next": "^13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-moment": "^1.1.3",
